sfSandBoxCode/force-app/main/default/objects/Franchisee_History_Record__c/Franchisee_History_Record__c.object-meta.xml
<CustomObject>
    <label>Franchisee History Record</label>
    <nameField>
        <displayFormat>FHR-{000}</displayFormat>
        <label>Franchisee History Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Franchisee History Records</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>