sfSandBoxCode/force-app/main/default/objects/Franchisee_History_Record__c/fields/Current_owner__c.field-meta.xml
<CustomField>
    <fullName>Current_owner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Current owner</label>
    <type>Checkbox</type>
</CustomField>