sfSandBoxCode/force-app/main/default/objects/Franchisee_History_Record__c/fields/Franchisee_account__c.field-meta.xml
<CustomField>
    <fullName>Franchisee_account__c</fullName>
    <label>Franchisee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>