sfSandBoxCode/force-app/main/default/objects/Franchisee_History_Record__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Franchisee History Records</relationshipLabel>
    <relationshipName>Franchisee_History_Records</relationshipName>
    <type>Lookup</type>
</CustomField>