sfSandBoxCode/force-app/main/default/objects/Franchisee_History_Record__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <inlineHelpText>The date that the franchisee started owning the toilet</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>