sfSandBoxCode/force-app/main/default/objects/Franchisee_History_Record__c/fields/Toilet__c.field-meta.xml
<CustomField>
    <fullName>Toilet__c</fullName>
    <label>Toilet</label>
    <referenceTo>Toilet__c</referenceTo>
    <relationshipLabel>Franchisee History Records</relationshipLabel>
    <relationshipName>Franchisee_History_Records</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>